--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,24 +1,27 @@
 @use "./../utils/colors";
 @use "./../utils/mixins";
 
+
+
+
+
 footer {
-  height: 252px;
   background-color: colors.$dark_blue;
 }
 
-footer div {
+.main_footer {
   width: 75%;
   margin-left: auto;
   margin-right: auto;
   padding-top: 60px;
+  padding-bottom: 60px;
+  display: flex;
+  justify-content: space-around;
 }
 
 footer h6 {
   font-family: Roboto;
   font-size: 14px;
-  font-weight: 400;
-  line-height: 24px;
-  letter-spacing: 0.03em;
   color: colors.$white;
   margin-top: 20px;
 }
@@ -26,11 +29,115 @@ footer h6 {
 footer span {
   font-family: Roboto;
   font-size: 14px;
-  font-weight: 400;
-  line-height: 24px;
-  letter-spacing: 0.03em;
   display: block;
   color: colors.$grey;
   margin-top: 9px;
 }
 
+.div_footer p {
+  font-family: Roboto;
+  font-size: 14px;
+  color: colors.$white;
+  margin-bottom: 20px;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+.svg_icon_footer:hover {
+  --color3: #{colors.$blue};
+  --color1: #{colors.$white};
+}
+
+.svg_icon_footer {
+  width: 44px;
+  height: 44px;
+  --color3: rgba(255, 255, 255, 0.1);
+  --color1: #{colors.$white};
+}
+
+/*.label_div1 {
+  width: 358px;
+  height: 50px;
+  border: 1px rgba(255, 255, 255, 0.3) solid;
+}*/
+
+.input1 {
+    border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+
+  font-family: Roboto;
+  font-size: 14px;
+
+  width: 358px;
+
+}
+
+.form-label1 {
+  width: 100%;
+
+  input {
+    border: none;
+    all: unset;
+    width: 100%;
+    padding: 10px;
+    color: colors.$white;
+  }
+}
+
+
+.footer_button {
+  width: 200px;
+  height: 50px;
+  background-color: colors.$blue;
+  color: colors.$white;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  border-radius: 4px;
+  padding: 10px 28px;
+}
+
+.svg_icon_fb {
+  width: 24px;
+  height: 24px;
+}
+
+.footer_butomsdiv {
+  display: flex;
+  justify-content:space-between;
+  gap: 12px;
+}
+
+
+
+@media screen and (max-width: 480px) {
+  .main_footer {
+    flex-wrap: wrap;
+    margin: 0 auto;
+  }
+
+  .input1 {
+    width: 250px;
+  }
+}
+
+@media screen and (max-width: 1320px) {
+  .main_footer {
+    flex-wrap: wrap;
+  }
+
+  .div_footer {
+    margin-bottom: 60px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .footer_butomsdiv {
+    flex-direction: column;
+    align-items: center;
+  }
+}
