--- a/sass/components/_special.scss
+++ b/sass/components/_special.scss
@@ -1,36 +1,21 @@
 @use "./../utils/colors";
 @use "./../utils/mixins";
 
-@media screen and (max-width: 1320px) {
-  .special_content {
-    flex-wrap: wrap;
-  }
-  .special_div {
-    width: 354px;
-  }
-}
 
-@media screen and (max-width: 480px) {
-  .special_content {
-    flex-wrap: wrap;
-    
-    flex-direction: column;
-  }
-  .special_div {
-    width: 450px;
-  }
-}
+
+
 
 
 
 
 .special_content {
-  width: 75%;
   margin-left: auto;
   margin-right: auto;
   display: flex;
   justify-content: space-between;
   margin-top: 94px;
+  padding-left: 55px;
+  padding-right: 55px;
 }
 
 .special_div {
@@ -48,4 +33,37 @@
   color: colors.$grey;
   margin: 0;
   margin-top: 10px;
+  width: 270px;
+
+  
+}
+
+
+
+
+@media screen and (max-width: 1320px) {
+  .special_content {
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding-left: 0;
+  padding-right: 0;
+  }
+  .special_div {
+    width: 354px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .special_content {
+    flex-wrap: wrap;
+    margin-left: 15px;
+    margin-right: 15px;
+    
+    flex-direction: column;
+  }
+
+  .special_div {
+    width: 100%;
+  }
+  
 }
