--- a/sass/components/_first.scss
+++ b/sass/components/_first.scss
@@ -14,6 +14,8 @@
   width: 100%;
 }
 
+
+
 .first div {
   @include mixins.flex_center;
   margin-top: 30px;
@@ -229,6 +231,13 @@
   100% {
      background-color: colors.$dark_blue;
   }
+}
+
+@media (min-resolution: 2x) {
+    .first {
+      background-image: url("/img/img_background2x.png") ;
+      background-size:cover;
+    }
 }
 
 
