--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -1,13 +1,11 @@
 @use "./../utils/colors";
 @use "./../utils/mixins";
 
-
-
 .buttom_port {
   padding: 6px 22px;
   background-color: #f5f4fa;
   border: none;
-color: #212121;
+  color: #212121;
   font-family: Roboto;
 
   font-size: 16px;
@@ -20,13 +18,12 @@ color: #212121;
 }
 
 .buttom_port:hover {
-    background-color: colors.$blue;
-    color: white;
+  background-color: colors.$blue;
+  color: white;
 }
 
 .buttombox {
   margin: 94px 0 50px;
-
 }
 
 .photo_content {
@@ -43,8 +40,10 @@ color: #212121;
   background-color: white;
   margin-left: auto;
   margin-right: auto;
+  position: relative;
+  display: inline-block;
 
-  border: 1px solid #EEEEEE;
+  border: 1px solid #eeeeee;
 
   p {
     font-family: Roboto;
@@ -68,6 +67,37 @@ color: #212121;
   margin: 20px 24px;
 }
 
+.overlayy {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 370px;
+  height: 294px;
+  background-color: rgba(33, 150, 243, 0.9);
+  font-size: 24px;
+  font-family: Roboto;
+  color: white;
+  top: 0;
+  opacity: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  p {
+    margin: 20px;
+    font-size: 18px;
+  font-family: Roboto;
+  }
+}
+
+
+.photobox:hover .overlayy {
+  opacity: 1;
+}
+
+
+
+
+
 
 @media screen and (max-width: 1320px) {
   .photo_content {
@@ -77,12 +107,10 @@ color: #212121;
 }
 
 @media screen and (max-width: 480px) {
-.buttombox {
-  margin-left: 25px;
-}
-.buttom_port {
-  margin-bottom: 15px;
-}
-
-
+  .buttombox {
+    margin-left: 25px;
+  }
+  .buttom_port {
+    margin-bottom: 15px;
+  }
 }
